--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
   "outputDirectory": "dist/public",
   "rewrites": [
     {
+      "source": "/app/GovProvaDeVida.apk",
+      "destination": "/app/GovProvaDeVida.apk"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
